- added image put and delete API - Added Mocha and Chai test framework - Fixed generateAccountResponse function - Fixed logic: send validate code when password is not set
